# tmlu-rs

./: Cargo.toml  README.md
examples/: tmlu2json.rs  tmlu2sqlite.rs
src/: lib.rs  tmlu.rs  utils.rs
tests/: integration_tests.rs
tests/testdata/: bowtie.tmlu  bowtie_closed.tmlu  circle_closed.tmlu  square_closed.tmlu  test1.tmlu  test2.tmlu  triangle_closed_looperr.tmlu
