[package]
name = "tmlu-rs"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
xml = "0.8.10"
quick-xml = "0.31.0"

[dev-dependencies]
pretty_assertions = "1.1.0"
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["serde_derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
clap = {version = "4.4.18", features = [ "derive" ]}
